[package]
name = "cuda-cryptography"
version = "0.1.0"
edition = "2021"
description = "BLAKE3-lite hash and HMAC signing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-cryptography"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

